// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VTextField.js should have prefix and suffix 1`] = `

<div class="v-input v-text-field v-text-field--prefix">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-text-field__slot">
        <div class="v-text-field__prefix">
          $
        </div>
        <input tabindex="0"
               type="text"
        >
        <div class="v-text-field__suffix">
          .com
        </div>
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTextField.js should not display counter when set to false/undefined/null 1`] = `

<div class="v-input v-text-field">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-text-field__slot">
        <input maxlength="50"
               tabindex="0"
               type="text"
        >
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages">
        <div class="v-messages__wrapper">
        </div>
      </div>
      <div class="v-counter">
        0 / 50
      </div>
    </div>
  </div>
</div>

`;

exports[`VTextField.js should not display counter when set to false/undefined/null 2`] = `

<div class="v-input v-text-field">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-text-field__slot">
        <input maxlength="50"
               tabindex="0"
               type="text"
        >
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTextField.js should render component and match snapshot 1`] = `

<div class="v-input v-text-field">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-text-field__slot">
        <input tabindex="0"
               type="text"
        >
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTextField.js should render component with async loading and custom progress and match snapshot 1`] = `

<div class="v-input v-text-field v-input--is-loading">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-text-field__slot">
        <input tabindex="0"
               type="text"
        >
      </div>
      <div class="v-progress-linear"
           style="height: 7px;"
      >
        <div class="v-progress-linear__background orange"
             style="height: 7px; opacity: 0.3; width: 100%;"
        >
        </div>
        <div class="v-progress-linear__bar">
          <div class="v-progress-linear__bar__indeterminate v-progress-linear__bar__indeterminate--active">
            <div class="v-progress-linear__bar__indeterminate long orange">
            </div>
            <div class="v-progress-linear__bar__indeterminate short orange">
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTextField.js should render component with async loading and match snapshot 1`] = `

<div class="v-input v-text-field v-input--is-loading">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-text-field__slot">
        <input tabindex="0"
               type="text"
        >
      </div>
      <div class="v-progress-linear"
           style="height: 2px;"
      >
        <div class="v-progress-linear__background primary"
             style="height: 2px; opacity: 0.3; width: 100%;"
        >
        </div>
        <div class="v-progress-linear__bar">
          <div class="v-progress-linear__bar__indeterminate v-progress-linear__bar__indeterminate--active">
            <div class="v-progress-linear__bar__indeterminate long primary">
            </div>
            <div class="v-progress-linear__bar__indeterminate short primary">
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>

`;
